10-21-16 added Chord Names
Update images

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ append body
 		#headerWrapper.container(style="text-align: center;width:100%")
 			
 			.alertWrapper(ng-show ="hasKeyBeenSelected()")
-				+alert-i-success(" {{selectedKey}} {{majorOrMinorString}} {{ScaleOrChord}} Selected","heart")
+				+alert-i-success(" {{selectedKey}} {{majorOrMinorString}} {{ScaleOrChord}}","heart")
 				//+alert-i-success("Key {{selectedKey}} Selected")
 				//#btnEditKey.keyButton(ng-click="editKeyClicked()")
 				//	+btn("Edit")
