--- a/views/layout.jade
+++ b/views/layout.jade
@@ -77,6 +77,7 @@ html(lang="en" ng-app='myApp')
                         script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
                         script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
                         script(src='javascripts/jquery.canvasjs.min.js')
+                        script(src='javascripts/angular-file-upload.min.js')
                         script(src='javascripts/app.js')
                         script(src='javascripts/services.js')
                         script(src='javascripts/controllers.js')
