--- a/views/layout.jade
+++ b/views/layout.jade
@@ -61,7 +61,7 @@ html(lang="en" ng-app='myApp')
                +navbar("Music Production Helper","dropdown_menu")
                         +nav_item("index","active") Home
                         +nav_item("tipsPage") Tips Library 
-                        +nav_item("about") About
+                        //+nav_item("about") About
                         +nav_item("samplesPage") Samples
                         +nav_item_dropdown("#")(label="Connect")
                                 +nav_item("https://soundcloud.com/crazylegsmusic","soundCloudLink") SoundCloud
