--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,3 +66,10 @@ a {
         font-size: smaller;
 	margin-top: 15px;
 }
+
+#navBarSortBtn{
+    margin-left:5px;
+}
+.arrowBtnClass{
+    float:right;
+}
