Sign in sign up profile

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -59,7 +59,7 @@ html(lang="en" ng-app='myApp')
                         link(rel='stylesheet', href='/stylesheets/style.css')
         body(data-spy="scroll",data-target=".scrollspy" ng-controller="bodyController")
                +navbar("Music Production Helper","dropdown_menu")
-                        +nav_item("index","active") Home
+                        +nav_item("index") Home
                         +nav_item("tipsPage") Tips Library 
                         //+nav_item("about") About
                         +nav_item("samplesPage") Samples
