--- a/views/signIn.jade
+++ b/views/signIn.jade
@@ -9,9 +9,9 @@ append body
 				#titleName= title				
 				div.alert#note #{messages}
 			form#signInDetails(action="/signIn" method = "post")
-				+label-info("Email:")
+				+label-info("Username:")
 				br
-				input#signInInput.form-control(name="email")
+				input#signInInput.form-control(name="username")
 				+label-info("Password:")
 				br
 				input#passWordInput.form-control(type="password" name="password")
