--- a/views/signUp.jade
+++ b/views/signUp.jade
@@ -8,9 +8,12 @@ append body
 			.titleBannerDiv()
 				#titleName= title
 			form#signInDetails(action="/signUp" method = "post")
+				+label-info("Username:")
+				br
+				input#usernameInput.form-control(name="username" ng-model="signUpUsername")
 				+label-info("Email:")
 				br
-				input#signUpInput.form-control(name="email" ng-model="signUpEmail")
+				input#emailInput.form-control(name="email" ng-model="signUpEmail")
 				+label-info("Password:")
 				br
 				input#passWordInput.form-control(type="password" name="password" ng-model="signUpPassword")
